@@ -135,3 +135,4 @@
   EntityModel.getDefaultValue() renamed to getDefaultEntity
   Some javadocking
   EntityModel.createPropertyComboBox() added and createEntityComboBox protected
+  EntityPanel.getInputManager, added List<Entity> toUpdate parameter
